# JobHound

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  supervisord.conf  taskfile.yaml
.moon/: workspace.yml
apps/server/: Dockerfile.dev  config.py  database.py  deps.py  main.py  moon.yml  package.json  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 71c762280b07_create_user_table.py
apps/server/models/: user.py
apps/server/routers/: auth.py
apps/server/schemas/: auth.py
apps/server/sites/wellfound/: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  taskfile.yaml
apps/server/sites/wellfound/config/: session.json
apps/server/utils/: security.py
apps/web/: Dockerfile.dev  moon.yml  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: auth.ts
apps/web/src/context/: AuthContext.tsx
apps/web/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
apps/web/src/schemas/: auth.ts
