[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.4.0",
    "bcrypt>=4.0",
    "alembic>=1.15.2",
    "pydantic-settings>=2.9.1",
]
